--- a/config/crd/bases/monitoring.datadog.com_monitors.yaml
+++ b/config/crd/bases/monitoring.datadog.com_monitors.yaml
@@ -39,11 +39,7 @@ spec:
             name:
               type: string
             options:
-              description: RawMessage is a raw encoded JSON value. It implements Marshaler
-                and Unmarshaler and can be used to delay JSON decoding or precompute
-                a JSON encoding.
-              format: byte
-              type: string
+              type: object
             query:
               type: string
             tags:
